syntax = "proto3";

package analytics;

option go_package = "github.com/esklo/residents-tracking-platform-backend/gen/proto/analytics";

import "theme/theme.proto";
import "google/protobuf/timestamp.proto";
import "empty/empty.proto";

service AnalyticsService {
  rpc RequestsPerTheme(RequestsPerThemeRequest) returns (RequestsPerThemeResponse) {};
  rpc Stats(empty.Empty) returns (StatsResponse) {};
  rpc RequestsPerThemePerDate(RequestsPerThemeRequest) returns (RequestsPerThemePerDateResponse) {};
}

message RequestsPerThemeRequest {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
}

message RequestsPerThemeResponse {
  repeated RequestsPerTheme data = 1;
}

message RequestsPerTheme {
  int64 count = 1;
  theme.Theme theme = 2;
}

message StatsElement {
  int64 week_count = 1;
  float week_delta = 2;
  int64 month_count = 3;
  float month_delta = 4;
  int64 open_count = 5;
}

message StatsResponse {
  StatsElement data = 1;
}

message RequestsPerThemePerDate  {
  int64 count = 1;
  theme.Theme theme = 2;
  google.protobuf.Timestamp date = 3;
}

message RequestsPerThemePerDateResponse {
  repeated RequestsPerThemePerDate data = 1;
}